# Final_AI_Vibe_Project1

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  docker-compose.yml
.claude/: settings.json
.claude-plugin/: marketplace.json
backend/: CLAUDE.md  conftest.py  market_data_demo.py  pyproject.toml  static
backend/app/: main.py
backend/app/api/: chat.py  market.py  portfolio.py  portfolio_logic.py  state.py  system.py  watchlist.py
backend/app/db/: database.py
backend/app/llm/: __init__.py  chat.py  prompts.py
backend/app/market/: __init__.py  cache.py  factory.py  interface.py  massive_client.py  models.py  simulator.py
backend/tests/api/: conftest.py  test_portfolio.py  test_system.py  test_watchlist.py
backend/tests/db/: test_database.py
backend/tests/llm/: test_chat.py
backend/tests/market/: test_cache.py  test_factory.py  test_massive_client.py  test_models.py  test_simulator.py
backend/tests/test_market/: test_cache.py  test_massive_client.py  test_models.py  test_simulator.py
frontend/: jest.config.ts  package-lock.json  package.json  tsconfig.jest.json
frontend/__mocks__/: lightweight-charts.js
frontend/__tests__/: TradeBar.test.tsx  WatchlistPanel.test.tsx
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ChatPanel.tsx  Header.tsx  MainChart.tsx  PnLChart.tsx  (+6 more)
planning/: API_CONTRACT.md  MARKET_INTERFACE.md  PLAN.md  REVIEW.md
scripts/: start_mac.sh  start_windows.ps1  stop_mac.sh  stop_windows.ps1
test/: README.md  docker-compose.test.yml  package-lock.json  package.json  playwright.config.ts
(+13 files in other folders)
